--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,12 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".Help"
-            android:label="@string/Actionbar_Title_5"
-            android:parentActivityName=".MainActivity"
-           >
+            android:name=".SplashScreen"
+            android:theme="@style/SplashScreenTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
 
@@ -23,13 +25,25 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
+
+        <activity
+            android:name=".Help"
+            android:label="@string/Actionbar_Title_5"
+            android:parentActivityName=".MainActivity"
+            >
+        </activity>
+
+
+
         <meta-data
             android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
+            android:resource="@array/preloaded_fonts"
+            />
+
     </application>
 
 </manifest>
