--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Authentication"></activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -24,7 +25,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.theftscanner.MainActivity" />
         </activity>
-
         <activity
             android:name=".SplashScreen"
             android:theme="@style/SplashScreenTheme">
@@ -34,22 +34,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
         </activity>
-
         <activity
             android:name=".Form"
             android:label="@string/title_activity_form"
             android:parentActivityName=".MainActivity" />
-
         <activity
             android:name=".Help"
             android:label="@string/title_activity_help"
