--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Authentication"></activity>
+
+        <activity android:name=".Profile"
+            android:label="@string/title_activity_profile"
+            android:parentActivityName=".MainActivity"/>
+
+        <activity android:name=".Authentication" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -25,6 +30,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.theftscanner.MainActivity" />
         </activity>
+
         <activity
             android:name=".SplashScreen"
             android:theme="@style/SplashScreenTheme">
@@ -34,10 +40,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
-        </activity>
+            android:label="@string/app_name"></activity>
         <activity
             android:name=".Form"
             android:label="@string/title_activity_form"
