--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Statistics"></activity>
+        <activity android:name=".Statistics"
+            android:label="@string/title_activity_statistics"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".Profile"
             android:label="@string/title_activity_profile"
