--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Statistics"
+        <activity
+            android:name=".Dashboard"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Statistics"
             android:label="@string/title_activity_statistics"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".Dashboard" />
         <activity
             android:name=".Profile"
             android:label="@string/title_activity_profile"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".Dashboard" />
         <activity android:name=".Authentication" />
 
         <meta-data
@@ -26,11 +31,10 @@
 
         <activity
             android:name=".Map"
-            android:label="@string/title_activity_map"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".Dashboard">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.theftscanner.MainActivity" />
+                android:value="com.example.theftscanner.Dashboard" />
         </activity>
         <activity
             android:name=".SplashScreen"
@@ -41,13 +45,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" />
+
         <activity
             android:name=".Form"
             android:label="@string/title_activity_form"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".Dashboard" />
 
         <meta-data
             android:name="preloaded_fonts"
