--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".TheftDetails"
+            android:label="@string/title_activity_details"
+            android:parentActivityName=".Dashboard" />
+        <activity
             android:name=".Dashboard"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
