--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.example.theftscanner"
+        applicationId "com.mohamed.theftscanner"
         minSdkVersion 15
         targetSdkVersion 29
         versionCode 1
